# matching

./: .gitignore  Cargo.toml  README.md  index.html  notiz  run-server.sh
res/: concept.json  concept.txt
src/: connections.rs  main.rs  rules.rs  score.rs
src/matching/: connections.rs  data.rs  mod.rs  rules.rs  score.rs
src/ui/: mod.rs  ui.rs
src/ui/generic/: collapsable.rs  mod.rs  table.rs
src/ui/input/: json_loader.rs  mod.rs
src/ui/rules/: mod.rs
static/: styles.css
