[package]
name = "matching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
derivative = "2.2.0"
regex = "1"
itertools = "0.10.3"
debug_print = "1.0.0"
console_error_panic_hook = "0.1.7"
yew = "0.19.3"
log = "0.4"
console_log = "0.2"

[profile.release]
debug = true